src/objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Appointment_Confirmation_Date__c</fullName>
        <label>Appointment Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Confirmed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Confirmed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Synaptic Advisors 2023</description>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Synaptic Advisors 2023</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>